--- a/package.json
+++ b/package.json
@@ -21,16 +21,13 @@
     "@turf/distance": "^7.1.0",
     "@turf/helpers": "^7.1.0",
     "@types/mapbox-gl": "^3.4.0",
-    "broadcast-channel": "^7.0.0",
-    "comlink": "^4.4.1",
     "deck.gl": "^9.0.30",
     "mapbox-gl": "^3.6.0",
     "mjolnir.js": "^2.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-map-gl": "^7.1.7",
-    "ts-event-bus": "^4.2.0",
-    "ws": "^8.18.0"
+    "tabs-broadcast": "^3.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
